[package]
name = "rustfilt"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
anyhow = "1"
bstr = "0.2"
rustc-demangle = "0.1"
regex = "^1"
v_htmlescape = "0.14"
